--- a/boards/shields/numberpad-test/numberpadtest.dtsi
+++ b/boards/shields/numberpad-test/numberpadtest.dtsi
@@ -1,10 +1,10 @@
 #include <dt-bindings/zmk/matrix_transform.h>
 #include <behaviors/rgbled_widget.dtsi>
 
-&gpio0 {
-    status = "okay";
-    // GPIO設定が正しいことを確認
-};
+chosen {
+        zmk,kscan = &kscan0;
+        zmk,matrix_transform = &default_transform;
+    };
 
 default_transform: keymap_transform_0 {
     compatible = "zmk,matrix-transform";
