--- a/config/numberpadtest.conf
+++ b/config/numberpadtest.conf
@@ -7,7 +7,7 @@ CONFIG_PINCTRL=y
 CONFIG_ZMK_USB_LOGGING=n
 CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 
-CONFIG_ZMK_STUDIO=n
+CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n 
 
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
