--- a/boards/shields/numberpad-test/numberpadtest.dtsi
+++ b/boards/shields/numberpad-test/numberpadtest.dtsi
@@ -4,7 +4,7 @@
 
 / {
   chosen {
-    zmk,physical-layout = &title72_physical_layout;
+    zmk,physical-layout = &numberpadtest_physical_layout;
   };
 
 numberpadtest_physical_layout: numberpadtest_physical_layout {
@@ -51,7 +51,7 @@ numberpadtest_physical_layout: numberpadtest_physical_layout {
 
     default_transform: keymap_transform_0 {
         compatible = "zmk,matrix-transform";
-        columns = <6>;
+        columns = <7>;
         rows = <6>;
 
         map = <
@@ -64,5 +64,9 @@ numberpadtest_physical_layout: numberpadtest_physical_layout {
         >;
     };
 
-    
+    kscan0: kscan_0 {
+        compatible = "zmk,kscan-gpio-charlieplex";
+ 
+        interrupt-gpios = <&xiao_d 1 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+    };
 };
