--- a/boards/shields/numberpad-test/numberpadtest.dtsi
+++ b/boards/shields/numberpad-test/numberpadtest.dtsi
@@ -55,18 +55,18 @@ numberpadtest_physical_layout: numberpadtest_physical_layout {
         rows = <6>;
 
         map = <
-            RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5)
-            RC(1,0) RC(1,2) RC(1,3) RC(1,4) RC(1,5)
-            RC(2,0) RC(2,1) RC(2,3) RC(2,4) RC(2,5)
-            RC(3,0) RC(3,1) RC(3,2) RC(3,4) RC(3,5)
-            RC(4,0) RC(4,1) RC(4,2) RC(4,3) RC(4,5)
-            RC(5,0) RC(5,1) RC(5,2) RC(5,3) RC(5,4)
+            RC(1,0) RC(2,0) RC(3,0) RC(4,0) RC(5,0)
+            RC(0,1) RC(2,1) RC(3,1) RC(4,1) RC(5,1)
+            RC(0,2) RC(1,2) RC(3,2) RC(4,2) RC(5,2)
+            RC(0,3) RC(1,3) RC(2,3) RC(4,3) RC(5,3)
+          RC(0,4) RC(1,4) RC(2,4) RC(3,4) RC(5,4)
+            RC(0,5) RC(1,5) RC(2,5) RC(3,5) RC(4,5)
         >;
     };
 
     kscan0: kscan_0 {
         compatible = "zmk,kscan-gpio-charlieplex";
  
-        interrupt-gpios = <&xiao_d 1 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+        interrupt-gpios = <& xiao_d 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
     };
 };
