--- a/boards/shields/numberpad-test/numberpadtest.dtsi
+++ b/boards/shields/numberpad-test/numberpadtest.dtsi
@@ -65,7 +65,7 @@ numberpadtest_physical_layout: numberpadtest_physical_layout {
     };
 
     kscan0: kscan_0 {
-        compatible = "zmk,kscan-g
+        compatible = "zmk,kscan-gpio-charlieplex";
         interrupt-gpios = <& xiao_d 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;
     };
 };
